--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2315,32 +2315,12 @@
                name="%option.flash"
                valueType="boolean">
          </option>
-      </toolChain>
-      <toolChain
-            id="com.synopsys.arc.gnu.elf.toolchain.arc"
-            isAbstract="true"
-            secondaryOutputs="com.synopsys.arc.gnu.elf.tool.flash.arc.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
-            superClass="com.synopsys.arc.gnu.elf.toolchain.base"
-            targetTool="com.synopsys.arc.gnu.elf.tool.c.linker.arc;com.synopsys.arc.gnu.elf.tool.cpp.linker.arc">
-         <tool
-               id="com.synopsys.arc.gnu.elf.tool.assembler.arc"
-               superClass="org.eclipse.cdt.cross.arc.gnu.assembler">
-         </tool>
-         <tool
-               id="com.synopsys.arc.gnu.elf.tool.c.compiler.arc"
-               superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </tool>
-         <tool
-               id="com.synopsys.arc.gnu.elf.tool.cpp.compiler.arc"
-               superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler">
-         </tool>
          <tool
                command="arc-elf32-gcc"
                commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
                errorParsers="org.eclipse.cdt.core.GLDErrorParser"
-               id="com.synopsys.arc.gnu.elf.tool.c.linker.arc"
-               isAbstract="false"
-               name="%tool.c.linker"
+               id="com.synopsys.arc.gnu.elf.tool.base.linker.arc"
+               isAbstract="true"
                natureFilter="cnature"
                outputFlag="-o">
             <envVarBuildPath
@@ -2350,7 +2330,7 @@
             <optionCategory
                   id="com.synopsys.arc.gnu.elf.tool.c.linker.arc.general"
                   name="General"
-                  owner="com.synopsys.arc.gnu.elf.tool.c.linker.arc">
+                  owner="com.synopsys.arc.gnu.elf.tool.base.linker.arc">
             </optionCategory>
             <option
                   applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
@@ -2413,7 +2393,7 @@
             <optionCategory
                   id="com.synopsys.arc.gnu.elf.tool.c.linker.arc.libs"
                   name="Libraries"
-                  owner="com.synopsys.arc.gnu.elf.tool.c.linker.arc">
+                  owner="com.synopsys.arc.gnu.elf.tool.base.linker.arc">
             </optionCategory>
             <option
                   browseType="none"
@@ -2434,7 +2414,7 @@
             <optionCategory
                   id="com.synopsys.arc.gnu.elf.tool.c.linker.arc.other"
                   name="Miscellaneous"
-                  owner="com.synopsys.arc.gnu.elf.tool.c.linker.arc">
+                  owner="com.synopsys.arc.gnu.elf.tool.base.linker.arc">
             </optionCategory>
             <option
                   category="com.synopsys.arc.gnu.elf.tool.c.linker.arc.other"
@@ -2504,21 +2484,38 @@
                </not>
             </enablement>
          </tool>
+      </toolChain>
+      <toolChain
+            id="com.synopsys.arc.gnu.elf.toolchain.arc"
+            isAbstract="true"
+            secondaryOutputs="com.synopsys.arc.gnu.elf.tool.flash.arc.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
+            superClass="com.synopsys.arc.gnu.elf.toolchain.base"
+            targetTool="com.synopsys.arc.gnu.elf.tool.c.linker.arc;com.synopsys.arc.gnu.elf.tool.cpp.linker.arc">
+         <tool
+               id="com.synopsys.arc.gnu.elf.tool.assembler.arc"
+               superClass="org.eclipse.cdt.cross.arc.gnu.assembler">
+         </tool>
+         <tool
+               id="com.synopsys.arc.gnu.elf.tool.c.compiler.arc"
+               superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler">
+         </tool>
+         <tool
+               id="com.synopsys.arc.gnu.elf.tool.cpp.compiler.arc"
+               superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler">
+         </tool>
+         <tool
+               command="arc-elf32-gcc"
+               id="com.synopsys.arc.gnu.elf.tool.c.linker.arc"
+               name="%tool.c.linker"
+               natureFilter="cnature"
+               superClass="com.synopsys.arc.gnu.elf.tool.base.linker.arc">
+         </tool>
          <tool
                command="arc-elf32-g++"
                id="com.synopsys.arc.gnu.elf.tool.cpp.linker.arc"
                name="%tool.cpp.linker"
                natureFilter="ccnature"
-               superClass="com.synopsys.arc.gnu.elf.tool.c.linker.arc">
-            <enablement
-                  type="ALL">
-               <not>
-                  <checkBuildProperty
-                        property="org.eclipse.cdt.build.core.buildArtefactType"
-                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib">
-                  </checkBuildProperty>
-               </not>
-            </enablement>
+               superClass="com.synopsys.arc.gnu.elf.tool.base.linker.arc">
          </tool>
          <tool
                command="arc-elf32-ar"
