--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -450,88 +450,16 @@
       <tool
             command="arc-elf32-gcc"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-            errorParsers="org.eclipse.cdt.core.GCCErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.c.compiler"
-            isAbstract="false"
-            name="ARC ELF32 GCC C Compiler"
-            natureFilter="both"
-            outputFlag="-o">
-         <supportedProperties>
-            <property
-                  id="org.eclipse.cdt.build.core.buildType">
-               <value
-                     id="org.eclipse.cdt.build.core.buildType.debug">
-               </value>
-               <value
-                     id="org.eclipse.cdt.build.core.buildType.release">
-               </value>
-            </property>
-         </supportedProperties>
+            name="%tool.c.compiler"
+            natureFilter="cnature"
+            superClass="cdt.managedbuild.tool.gnu.c.compiler">
          <envVarBuildPath
                pathType="buildpathInclude"
                variableList="CPATH,C_INCLUDE_PATH">
          </envVarBuildPath>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.preprocessor"
-               name="Preprocessor"
-               owner="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </optionCategory>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.preprocessor"
-               command="-nostdinc"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.preprocessor.nostdinc"
-               name="Do not search system directories (-nostdinc)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.preprocessor"
-               command="-E"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.preprocessor.preprocess"
-               name="Preprocess only (-E)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.preprocessor"
-               command="-D"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.preprocessor.def"
-               name="Defined symbols (-D)"
-               valueType="definedSymbols">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.preprocessor"
-               command="-U"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.preprocessor.undef"
-               name="Undefined symbols (-U)"
-               valueType="undefDefinedSymbols">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.dirs"
-               name="Directories"
-               owner="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </optionCategory>
-         <option
-               browseType="directory"
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.dirs"
-               command="-I"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.include.paths"
-               name="Include paths (-I)"
-               valueType="includePath">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
-               name="Optimization"
-               owner="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.level"
-               name="Optimization level"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.optimization.level">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
+               category="gnu.c.compiler.category.optimization"
                command="-fpack-struct"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.packstruct"
@@ -540,7 +468,7 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
+               category="gnu.c.compiler.category.optimization"
                command="-fshort-enums"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.shortenums"
@@ -549,7 +477,7 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
+               category="gnu.c.compiler.category.optimization"
                command="-ffunction-sections"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.functionsections"
@@ -558,7 +486,7 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
+               category="gnu.c.compiler.category.optimization"
                command="-fdata-sections"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.datasections"
@@ -567,65 +495,7 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.optimization"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.optimization.flags"
-               name="Other optimization flags"
-               valueType="string">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
-               name="%option.debugging">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging.level"
-               name="Debug Level"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.none"
-                  isDefault="false"
-                  name="None">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-g1"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.minimal"
-                  name="Minimal (-g1)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-g"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.default"
-                  isDefault="true"
-                  name="Default (-g)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-g3"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.max"
-                  isDefault="false"
-                  name="Maximum (-g3)">
-            </enumeratedOptionValue>
-            <enablement
-                  attribute="value"
-                  extensionAdjustment="false"
-                  type="CONTAINER_ATTRIBUTE"
-                  value="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.none">
-               <checkBuildProperty
-                     property="org.eclipse.cdt.build.core.buildType"
-                     value="org.eclipse.cdt.build.core.buildType.release">
-               </checkBuildProperty>
-            </enablement>
-            <enablement
-                  attribute="value"
-                  extensionAdjustment="false"
-                  type="CONTAINER_ATTRIBUTE"
-                  value="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.level.max">
-               <checkBuildProperty
-                     property="org.eclipse.cdt.build.core.buildType"
-                     value="org.eclipse.cdt.build.core.buildType.debug">
-               </checkBuildProperty>
-            </enablement>
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
+               category="gnu.c.compiler.category.debug"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging.format"
                name="Debug Format"
                valueType="enumerated">
@@ -676,126 +546,12 @@
             </enablement>
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging.other"
-               name="Other debugging flags"
-               valueType="string">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
-               command="-p"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging.prof"
-               name="Generate prof information (-p)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging"
-               command="-pg"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.debugging.gprof"
-               name="Generate gprof information (-pg)"
-               valueType="boolean">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               name="Warnings"
-               owner="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-fno-common"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.nocommon"
-               name="No common (-fno-common)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-pedantic"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.pedantic"
-               name="Pedantic (-pedantic)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-pedantic-errors"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.pedantic.error"
-               name="Pedantic warnings as errors (-pedantic-errors)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-w"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.nowarn"
-               name="Inhibit all warnings (-w)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-Wall"
-               defaultValue="true"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.allwarn"
-               name="All warnings (-Wall)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-Wextra"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.extrawarn"
-               name="Extra warnings (-Wextra)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.warnings"
-               command="-Werror"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.warnings.toerrors"
-               name="Warnings as errors (-Werror)"
-               valueType="boolean">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
-               name="Miscellaneous"
-               owner="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.std"
-               name="Language Standard"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-ansi"
-                  id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.std.ansi"
-                  name="ISO C90 (-ansi)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-std=c99"
-                  id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.std.c99"
-                  name="ISO C99 (-std=c99)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.std.default"
-                  isDefault="true"
-                  name="Compiler Default (ISO C90 with GNU extensions)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-std=gnu99"
-                  id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.std.gnu99"
-                  name="ISO C99 with GNU Extensions (-std=gnu99)">
-            </enumeratedOptionValue>
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
+               category="gnu.c.compiler.category.other"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.lstfilename"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.other.lstfilename">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
+               category="gnu.c.compiler.category.other"
                command="-fno-inline-functions"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.noinlinefunctions"
@@ -803,7 +559,7 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
+               category="gnu.c.compiler.category.other"
                command="-fsigned-char"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.signedchar"
@@ -811,45 +567,18 @@
                valueType="boolean">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
+               category="gnu.c.compiler.category.other"
                command="-funsigned-bitfields"
                defaultValue="false"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.misc.unsignedbitfields"
                name="Bitfields are unsigned (-funsigned-bitfields)"
                valueType="boolean">
          </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
-               command="-v"
-               defaultValue="false"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.other.verbose"
-               name="Verbose (-v)"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.c.compiler.category.other"
-               defaultValue="-c -fmessage-length=0"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.option.other.otherflags"
-               name="Other flags"
-               valueType="string">
-         </option>
          <inputType
-               dependencyCalculator="org.eclipse.cdt.managedbuilder.makegen.gnu.DefaultGCCDependencyCalculator2"
-               dependencyContentType="org.eclipse.cdt.core.cHeader"
-               dependencyExtensions="h"
                id="org.eclipse.cdt.cross.arc.gnu.c.compiler.input"
-               languageId="org.eclipse.cdt.core.gcc"
                scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_GCCManagedMakePerProjectProfileC|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-               sourceContentType="org.eclipse.cdt.core.cSource"
-               sources="c"
                superClass="cdt.managedbuild.tool.gnu.c.compiler.input">
          </inputType>
-         <outputType
-               buildVariable="OBJS"
-               id="org.eclipse.cdt.cross.arc.gnu.c.compiler.output"
-               outputs="o"
-               superClass="cdt.managedbuild.tool.gnu.c.compiler.output">
-         </outputType>
       </tool>
       <tool
             command="arc-elf32-g++"
