elf: Define C++ compiler as a subclass of C compiler

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -43,6 +43,7 @@ toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
 
 # Tools
 tool.c.compiler = ARC GNU C Compiler
+tool.cpp.compiler = ARC GNU C++ Compiler
 tool.c.linker = ARC GNU C Linker
 tool.cpp.linker = ARC GNU C++ Linker
 tool.archiver = ARC GNU Archiver
@@ -51,7 +52,7 @@ tool.listing = ARC GNU Create Listing
 tool.printsize = ARC GNU Print Size
 tool.assembler_eb = ARC GCC Assembler (EB)
 tool.c.compiler_eb = ARC GNU C Compiler (EB)
-tool.cpp.compiler_eb = ARC GCC C++ Compiler (EB)
+tool.cpp.compiler_eb = ARC GNU C++ Compiler (EB)
 tool.c.linker_eb = ARC GNU C Linker (EB)
 tool.cpp.linker_eb = ARC GNU C++ Linker (EB)
 tool.archiver_eb = ARC GNU Archiver (EB)
