--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -28,9 +28,6 @@ option.printsize = Print size
 option.listing = Create listing file
 option.flash = Create flash image file
 
-# Compiler -> Debugging
-option.debugging = Debugging
-
 # Toolchains
 toolchain.em = GNU Toolchain for ARC EM
 toolchain.emeb = GNU Toolchain for ARC EM (big-endian)
@@ -44,18 +41,25 @@ toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
 # Tools
 tool.c.compiler = ARC GNU C Compiler
 tool.cpp.compiler = ARC GNU C++ Compiler
+tool.assembler = ARC GNU Assembler
 tool.c.linker = ARC GNU C Linker
 tool.cpp.linker = ARC GNU C++ Linker
 tool.archiver = ARC GNU Archiver
 tool.flash = ARC GNU Create Flash Image
 tool.listing = ARC GNU Create Listing
 tool.printsize = ARC GNU Print Size
-tool.assembler_eb = ARC GCC Assembler (EB)
 tool.c.compiler_eb = ARC GNU C Compiler (EB)
 tool.cpp.compiler_eb = ARC GNU C++ Compiler (EB)
+tool.assembler_eb = ARC GNU Assembler (EB)
 tool.c.linker_eb = ARC GNU C Linker (EB)
 tool.cpp.linker_eb = ARC GNU C++ Linker (EB)
 tool.archiver_eb = ARC GNU Archiver (EB)
 tool.flash_eb = ARC GNU Create Flash Image (EB)
 tool.listing_eb = ARC GNU Create Listing (EB)
 tool.printsize_eb = ARC GNU Print Size (EB)
+
+# Compiler -> Debugging
+option.debugging = Debugging
+
+# Assembler
+option.assembler.flags = Assembler flags
